       [, boolean drawFeaturesForward ]]
     )


   expose the following $named textures to LuaOpenGL
     "$map_reflection" (same as "$reflection")
     "$sky_reflection" (defined for SSMF maps that have a skyReflectModTex)

     "$detail"
     "$normals" (auto-generated)

     "$ssmf_normals"
     "$ssmf_specular"
     "$ssmf_splat_distr"
     "$ssmf_splat_detail"
     "$ssmf_splat_normals:X"
     "$ssmf_sky_refl"
     "$ssmf_emission"
     "$ssmf_parallax"

     'X' can be omitted (not the ':'), or a value between 0 and 3
 - add callouts Preload{Feature,Unit}DefModel allowing the engine
   to load the unit's model (and texture) in a background thread.
   wreckages and buildOptions of a unit are automatically preloaded.

Rendering:
 - add support for SSMF Splat Detail Normal Textures (by Beherith)
 - add deferred pass for features; note that these are drawn into
   the same buffer as units (overwriting it, unless the new config
   variable AllowDeferredModelBufferClear is set to false [default])
 - allow custom shaders for being-built units
 - allow custom Lua map shaders


-- 100.0 --------------------------------------------------------
Major:
 - bugfixes

InfoTexture:
 ! Added radar2 los colour for colouring the inside of the radar edge.
  - it is changeable through SetLosViewColors (see Lua changes)

WeaponDefs:
 - fix visibleShieldHitFrames not read from shield subtable
 ! scale flighttime with GAME_SPEED and not 32
 - warn on unknown tags
  - weapondefs_post.lua: set legacy weapontype tags to nil, so they don't cause engine warnings

LOS:
 - make little bit more accurate

Lua:
 ! SetLosViewColors changed:
  - radar2 colour (see Map changes) is required.
  - parameters are now in the form of GetLosViewColors output:
    (always = {r,g,b}, LOS = {r,g,b}, radar = {r,g,b}, jammer = {r,g,b}, radar2 = {r,g,b})
 - changed args of Spring.GetGroundNormal
  - new 3rd arg: bool smoothedNormal (default false)
  - 4th return arg: float slope